# TransServ

./: MANIFEST.in  README.md  project_configure.json  pyproject.toml  setup.py
TransServ/: __config__.py  __init__.py  main.py
TransServ.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
complete/fig/: ts.ts
complete/zsh/: _ts
